added cli_arg.h to install

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -167,6 +167,7 @@ install(FILES
     include/mavsdk/geometry.h
     include/mavsdk/server_component.h
     include/mavsdk/mavlink_address.h
+    cli_arg.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/mavsdk/mavlink_include.h
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mavsdk"
 )
