--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -168,6 +168,7 @@ install(FILES
     include/mavsdk/server_component.h
     include/mavsdk/mavlink_address.h
     cli_arg.h
+    log.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/mavsdk/mavlink_include.h
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mavsdk"
 )
